
2006-11-14 cjg
 * Fixed bug in rmtree when dir doesn't exist if gave a warning!
 * (re)Fixed bug in ordervalues of metafield pagerange.

======================================================================
14/11/2006 - EPRINTS-3.0-beta-2
======================================================================

2006-11-14 cjg
 * Tweaked favicon - could still be better
 * Non existant archiveid now gives a nice error.

2006-11-15 tdb
 * Moved mkdir to EPrints::Platform (#2632)
 * Documented EPrints::Platform
 * Fixed bug in EPrints::EPrint: ->session to ->get_session

2006-11-15 moj
 * Added EPJS_enter_click - clicks a button when enter is pressed in 
    a field.
 * Set reference rows to 15 (also fixes Safari bug)
 * Set subject quicksearch to use the enter javascript

2006-11-15 moj
 * Metafield.pm now uses the noenter input field (enter blocking wasn't working
    on some fields). 

2006-11-15 moj
 * Added $self->{surround} to Component. This is overriden by XHTML and Upload
    to Light and None respectively. Any surround attributes in the workflow files
    override these defaults.
 * Added get_surround to component. This returns the relevant Surround object 
    (Default if none is specified).
 * Tidied the %params bit in Stage.pm a little.

2006-11-15 moj
 * Removed 10_core.pl, database.pl, and archive_name.xml from the repository 
    - they are created by epadmin, and otherwise get in the way when making 
    commits.

2006-11-15 moj
 * Create human_delay in EPrints::Utils. This is similar to human_filesize, and
    returns a string in the form 'N hour(s)', 'N day(s)', or 'N week(s)'. It
    is not meant to be accurate (e.g. it doesn't say '3 days and 2 hours').
 * The registration mail now says how long the user has to confirm registration.
 * The reject email now has a link to the edit page.
 * Tidied up Reject/Remove a little.

2006-11-16 tdb
 * Added export plugins for METS and MODS

2006-11-17 moj
 * Added export plugin for Atom